PhaseHighlightComposer: Convert to  component

--- a/ember/app/components/flight-map.hbs
+++ b/ember/app/components/flight-map.hbs
@@ -7,7 +7,7 @@
     <CesiumButton @enabled={{cesiumEnabled}} @onEnable={{this.enableCesium}} @onDisable={{this.disableCesium}} />
     <FlightPathLayer @map={{map}} @flights={{flights}} />
 
-    <PhaseHighlightComposer @map={{map}} @coordinates={{phaseHighlightCoords}} />
+    <PhaseIconsLayer @map={{map}} @coordinates={{phaseHighlightCoords}} />
     {{did-update this.zoomToPhase @phaseHighlightCoords @calculatePadding}}
 
     <PlaneIconsComposer @map={{map}} @fixes={{fixes}} />
