--- a/ember/app/components/tracking-page.hbs
+++ b/ember/app/components/tracking-page.hbs
@@ -15,7 +15,7 @@
       @fixes={{fixCalc.fixes}}
       @hoverEnabled={{not (or fixCalc.isRunning cesiumEnabled)}}
       @defaultTime={{fixCalc.defaultTime}}
-      @onTimeChange={{this.fixCalc.setTime}}
+      @onTimeChange={{action (mut fixCalc.time)}}
       @onExtentChange={{action (mut mapExtent)}}
       @onCesiumEnabledChange={{action (mut cesiumEnabled)}}
       @calculatePadding={{action "calculatePadding"}}
@@ -42,9 +42,7 @@
         @hoverMode={{not fixCalc.isRunning}}
         @timeInterval={{timeInterval}}
         @time={{fixCalc.time}}
-        @defaultTime={{fixCalc.defaultTime}}
-        @onTimeChange={{this.fixCalc.setTime}}
-      />
+        @defaultTime={{fixCalc.defaultTime}} />
     </div>
 
   {{else}}
