barogram: Convert crosshair to derived state

--- a/ember/app/components/base-barogram.hbs
+++ b/ember/app/components/base-barogram.hbs
@@ -1,1 +1,2 @@
 <div style={{flotStyle}} {{did-insert this.initFlot}} {{did-update (action "redraw") this.data}}></div>
+{{did-update this.setCrosshair this.crosshair}}
