barogram: Convert grid markings to derived state

--- a/ember/app/components/base-barogram.hbs
+++ b/ember/app/components/base-barogram.hbs
@@ -1,2 +1,3 @@
 <div style={{flotStyle}} {{did-insert this.initFlot}} {{did-update (action "redraw") this.data}}></div>
 {{did-update this.setCrosshair this.crosshair}}
+{{did-update this.setGridMarkings this.gridMarkings}}
