barogram: Remove  property

--- a/ember/app/components/tracking-page.hbs
+++ b/ember/app/components/tracking-page.hbs
@@ -44,6 +44,7 @@
         @time={{fixCalc.time}}
         @defaultTime={{fixCalc.defaultTime}}
         @onTimeChange={{this.fixCalc.setTime}}
+        local-class="barogram"
       />
     </div>
 
