--- a/ember/app/components/upload-result-form.hbs
+++ b/ember/app/components/upload-result-form.hbs
@@ -76,7 +76,7 @@
         @onScoreEndTimeChange={{action "setScoreEndTime"}}
         @landingTime={{landingTime}}
         @onLandingTimeChange={{action "setLandingTime"}}
-        class="col-xs-12" />
+        local-class="barogram" />
     {{/if}}
 
     <div class="form-group col-sm-3">
