--- a/ember/app/components/flight-page.hbs
+++ b/ember/app/components/flight-page.hbs
@@ -77,6 +77,7 @@
       @time={{fixCalc.time}}
       @defaultTime={{fixCalc.defaultTime}}
       @onTimeChange={{this.fixCalc.setTime}}
+      local-class="barogram"
     />
   </div>
 </div>
