barogram: Convert X axis to derived state

--- a/ember/app/components/base-barogram.hbs
+++ b/ember/app/components/base-barogram.hbs
@@ -1,3 +1,4 @@
 <div ...attributes {{did-insert this.initFlot}} {{did-update this.draw this.data}}></div>
 {{did-update this.setCrosshair this.crosshair}}
 {{did-update this.setGridMarkings this.gridMarkings}}
+{{did-update this.setXAxis this.xaxis}}
