--- a/ember/app/components/nav-bar-menu-right.hbs
+++ b/ember/app/components/nav-bar-menu-right.hbs
@@ -15,7 +15,7 @@
       {{/nav.link-to}}
     </nav.item>
 
-    <nav.dropdown @tagName="li" data-test-user-menu-dropdown as |dd|>
+    <nav.dropdown data-test-user-menu-dropdown as |dd|>
       <dd.toggle data-test-toggle>
         {{account.user.name}} {{svg-jar "caret-down" class="fa-svg"}}
       </dd.toggle>
@@ -31,7 +31,7 @@
       {{/nav.link-to}}
     </nav.item>
 
-    <nav.dropdown @closeOnMenuClick={{false}} @tagName="li" class="hidden-xs" data-test-login-dropdown as |dd|>
+    <nav.dropdown @closeOnMenuClick={{false}} class="hidden-xs" data-test-login-dropdown as |dd|>
       <dd.toggle>
         {{svg-jar "sign-in" class="fa-svg"}} {{t "login"}} {{svg-jar "caret-down" class="fa-svg"}}
       </dd.toggle>
@@ -41,7 +41,7 @@
     </nav.dropdown>
   {{/if}}
 
-  <nav.dropdown @tagName="li" as |dd|>
+  <nav.dropdown as |dd|>
     <dd.toggle>
       <XFlag @code={{currentLocale.countryCode}} />
       <span class="visible-xs-inline-block">{{currentLocale.name}}</span>
