--- a/ember/app/components/season-dropdown.hbs
+++ b/ember/app/components/season-dropdown.hbs
@@ -1,5 +1,5 @@
 <BsNav @type="pills" ...attributes as |nav|>
-  <nav.dropdown as |dd|>
+  <nav.dropdown @tagName="li" as |dd|>
     <dd.toggle>
       {{#if (eq @year "all")}}
         {{t "all-time"}}
@@ -10,12 +10,12 @@
     </dd.toggle>
 
     <dd.menu as |menu|>
-      <nav.item><nav.linkTo @query={{hash year="all"}}>{{t "all-time"}}</nav.linkTo></nav.item>
+      <nav.item>{{#nav.link-to (query-params year="all")}}{{t "all-time"}}{{/nav.link-to}}</nav.item>
 
       {{menu.divider}}
 
       {{#each this.recentYears as |year|}}
-        <nav.item><nav.linkTo @query={{hash year=year}}>{{year}}</nav.linkTo></nav.item>
+        <nav.item>{{#nav.link-to (query-params year=year)}}{{year}}{{/nav.link-to}}</nav.item>
       {{/each}}
     </dd.menu>
   </nav.dropdown>
