--- a/ember/app/components/pilot-select.hbs
+++ b/ember/app/components/pilot-select.hbs
@@ -1,4 +1,4 @@
-<PowerSelect @options={{pilots}} @selected={{pilot}} @onchange={{action "onChange"}} @searchField="name" as |pilot|>
+<PowerSelect @options={{pilots}} @selected={{pilot}} @onChange={{action "onChange"}} @searchField="name" as |pilot|>
   {{#if (eq pilot.id null)}}
     [{{t "unknown-or-other-person"}}]
   {{else}}
