--- a/ember/app/components/settings-panels/choose-club.hbs
+++ b/ember/app/components/settings-panels/choose-club.hbs
@@ -19,7 +19,7 @@
           @options={{clubsWithNull}}
           @selected={{club}}
           @searchField="name"
-          @onchange={{action (mut club)}}
+          @onChange={{action (mut club)}}
         as |club|>
           {{#if (eq club.id null)}}
             [{{t "no-club"}}]
