--- a/ember/app/components/settings-panels/profile.hbs
+++ b/ember/app/components/settings-panels/profile.hbs
@@ -8,7 +8,7 @@
       {{else if messageKey}}
         <BsAlert @type="success" @dismissible={{false}}>{{t messageKey}}</BsAlert>
       {{/if}}
-  
+
       <ValidatedInput
         @value={{email}}
         @validation={{validations.attrs.email}}
@@ -16,7 +16,7 @@
         @autocomplete="email"
         @disabled={{saveTask.isRunning}}
         @didValidate={{didValidate}} />
-  
+
       <ValidatedInput
         @value={{firstName}}
         @validation={{validations.attrs.firstName}}
@@ -24,7 +24,7 @@
         @autocomplete="given-name"
         @disabled={{saveTask.isRunning}}
         @didValidate={{didValidate}} />
-  
+
       <ValidatedInput
         @value={{lastName}}
         @validation={{validations.attrs.lastName}}
@@ -32,20 +32,20 @@
         @autocomplete="family-name"
         @disabled={{saveTask.isRunning}}
         @didValidate={{didValidate}} />
-  
+
       <div class="form-group">
         <label class="control-label">{{t "units.title"}}</label>
-  
+
         <PowerSelect
           @options={{unitsPresets}}
           @searchEnabled={{false}}
           @selected={{unitsPreset}}
-          @onchange={{action (mut unitsPreset)}}
+          @onChange={{action (mut unitsPreset)}}
         as |preset|>
           {{t (concat "units.presets." preset)}}
         </PowerSelect>
       </div>
-  
+
       {{#if (eq unitsPreset "custom")}}
         <div class="form-group">
           <label class="control-label">{{t "units.distance"}}</label>
@@ -53,49 +53,49 @@
             @options={{units.distanceUnits}}
             @searchEnabled={{false}}
             @selected={{distanceUnit}}
-            @onchange={{action (mut distanceUnit)}}
+            @onChange={{action (mut distanceUnit)}}
           as |unit|>
             {{unit}}
           </PowerSelect>
         </div>
-  
+
         <div class="form-group">
           <label class="control-label">{{t "units.speed"}}</label>
           <PowerSelect
             @options={{units.speedUnits}}
             @searchEnabled={{false}}
             @selected={{speedUnit}}
-            @onchange={{action (mut speedUnit)}}
+            @onChange={{action (mut speedUnit)}}
           as |unit|>
             {{unit}}
           </PowerSelect>
         </div>
-  
+
         <div class="form-group">
           <label class="control-label">{{t "units.lift"}}</label>
           <PowerSelect
             @options={{units.liftUnits}}
             @searchEnabled={{false}}
             @selected={{liftUnit}}
-            @onchange={{action (mut liftUnit)}}
+            @onChange={{action (mut liftUnit)}}
           as |unit|>
             {{unit}}
           </PowerSelect>
         </div>
-  
+
         <div class="form-group">
           <label class="control-label">{{t "units.altitude"}}</label>
           <PowerSelect
             @options={{units.altitudeUnits}}
             @searchEnabled={{false}}
             @selected={{altitudeUnit}}
-            @onchange={{action (mut altitudeUnit)}}
+            @onChange={{action (mut altitudeUnit)}}
           as |unit|>
             {{unit}}
           </PowerSelect>
         </div>
       {{/if}}
-  
+
       <button class="btn btn-primary btn-block" type="submit" disabled={{or saveTask.isRunning (not validations.isValid)}}>
         {{t (if saveTask.isRunning "changing" "change")}}
       </button>
