--- a/ember/app/components/contest-layer.hbs
+++ b/ember/app/components/contest-layer.hbs
@@ -1,3 +1,5 @@
+{{did-insert this.setVisible @visible}}
+{{did-update this.setVisible @visible}}
 {{#each contests as |contest|}}
   {{#if contest}}
     <ContestLayerFeature @source={{source}} @contest={{contest}} />
