--- a/ember/app/components/circling-performance-table.hbs
+++ b/ember/app/components/circling-performance-table.hbs
@@ -6,10 +6,10 @@
       <th class="numeric">{{t "count"}}<br>{{t "avg-vario-abbr"}}</th>
       <th class="numeric">{{t "duration"}}<br>&Delta;H</th>
     </tr>
-    {{#if total}}<CirclingPerformanceRow @perf={{total}} />{{/if}}
-    {{#if left}}<CirclingPerformanceRow @perf={{left}} />{{/if}}
-    {{#if right}}<CirclingPerformanceRow @perf={{right}} />{{/if}}
-    {{#if mixed}}<CirclingPerformanceRow @perf={{mixed}} />{{/if}}
+    {{#if this.total}}<CirclingPerformanceRow @perf={{this.total}} />{{/if}}
+    {{#if this.left}}<CirclingPerformanceRow @perf={{this.left}} />{{/if}}
+    {{#if this.right}}<CirclingPerformanceRow @perf={{this.right}} />{{/if}}
+    {{#if this.mixed}}<CirclingPerformanceRow @perf={{this.mixed}} />{{/if}}
     </tbody>
   </table>
 
