WingmanTable: Convert to Glimmer component

--- a/ember/app/components/wingman-table.hbs
+++ b/ember/app/components/wingman-table.hbs
@@ -7,7 +7,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each nearFlightsWithColors as |nearFlight|}}
+    {{#each this.nearFlightsWithColors as |nearFlight|}}
       <WingmanRow @nearFlight={{nearFlight}} {{on "click" (action "select" nearFlight.flight.id)}} />
     {{/each}}
   </tbody>
