Update dependency ember-cli-htmlbars to v5.3.0 (#2126)

--- a/ember/app/components/tracking-page.hbs
+++ b/ember/app/components/tracking-page.hbs
@@ -32,8 +32,7 @@
         <FixTable
           @flights={{fixCalc.flights}}
           @fixes={{fixCalc.fixes}}
-          @selection={{this.selectedFlightId}}
-          @onSelectionChange={{fn (mut this.selectedFlightId)}}
+          @selection={{mut selectedFlightId}}
           @onRemove={{action "removeFlight"}} />
       </div>
 
