--- a/ember/app/components/fix-table.hbs
+++ b/ember/app/components/fix-table.hbs
@@ -1,12 +1,14 @@
-<table local-class="fix-table" class="table table-condensed" ...attributes>
-  <tbody>
-    {{#each this.data as |row|}}
-      <FixTableRow
-        @row={{row}}
-        @selectable={{this.selectable}}
-        @selected={{and this.selectable (eq row.id @selection)}}
-        @onSelect={{this.select}}
-        @onRemove={{this.onRemove}} />
-    {{/each}}
-  </tbody>
-</table>
+<div ...attributes>
+  <table local-class="fix-table" class="table table-condensed">
+    <tbody>
+      {{#each data as |row|}}
+        <FixTableRow
+          @row={{row}}
+          @selectable={{selectable}}
+          @selected={{and selectable (eq row.id selection)}}
+          @onSelect={{action "select"}}
+          @onRemove={{onRemove}} />
+      {{/each}}
+    </tbody>
+  </table>
+</div>
