--- a/ember/app/components/flight-list-nav.hbs
+++ b/ember/app/components/flight-list-nav.hbs
@@ -3,28 +3,28 @@
     {{#nav.link-to "flights.all"}}{{t "all"}}{{/nav.link-to}}
   </nav.item>
 
-  {{#if this.prevDate}}
+  {{#if prevDate}}
     <li>
-      <LinkTo @route="flights.date" @model={{this.prevDate}}>&nbsp;{{svg-jar "arrow-left" class="fa-svg"}}&nbsp;</LinkTo>
+      <LinkTo @route="flights.date" @model={{prevDate}}>&nbsp;{{svg-jar "arrow-left" class="fa-svg"}}&nbsp;</LinkTo>
     </li>
   {{/if}}
 
-  {{#if (or (not @date) @latest)}}
+  {{#if (or (not date) latest)}}
     <nav.item>
       <nav.linkTo
         @route="flights.latest"
         {{on "click" this.maybePreventDefault}}
         {{on-click-outside this.closeDatePicker}}
       >
-        {{#if @date}}
-          {{format-date @date format="ddmmyyyy" timeZone="UTC"}}
+        {{#if date}}
+          {{format-date date format="ddmmyyyy" timeZone="UTC"}}
         {{else}}
           {{t "latest"}}
         {{/if}}
         <EmberFlatpickr
-          @date={{or @date null}}
+          @date={{or this.date null}}
           @getFlatpickrRef={{action (mut this.flatpickr)}}
-          @onChange={{this.dateSelected}}
+          @onChange={{action "dateSelected"}}
           @static={{true}}
           local-class="datepicker"
         />
@@ -35,19 +35,19 @@
     </nav.item>
   {{/if}}
 
-  {{#if (and @date (not @latest))}}
+  {{#if (and date (not latest))}}
     <nav.item>
       <nav.linkTo
         @route="flights.date"
-        @model={{@date}}
+        @model={{date}}
         {{on "click" this.maybePreventDefault}}
         {{on-click-outside this.closeDatePicker}}
       >
-        {{format-date @date format="ddmmyyyy" timeZone="UTC"}}
+        {{format-date date format="ddmmyyyy" timeZone="UTC"}}
         <EmberFlatpickr
-          @date={{@date}}
+          @date={{date}}
           @getFlatpickrRef={{action (mut this.flatpickr)}}
-          @onChange={{this.dateSelected}}
+          @onChange={{action "dateSelected"}}
           @static={{true}}
           local-class="datepicker"
         />
@@ -58,49 +58,49 @@
     </nav.item>
   {{/if}}
 
-  {{#if this.nextDate}}
+  {{#if nextDate}}
     <li>
-      <LinkTo @route="flights.date" @model={{this.nextDate}}>&nbsp;{{svg-jar "arrow-right" class="fa-svg"}}&nbsp;</LinkTo>
+      <LinkTo @route="flights.date" @model={{nextDate}}>&nbsp;{{svg-jar "arrow-right" class="fa-svg"}}&nbsp;</LinkTo>
     </li>
   {{/if}}
 
-  {{#if @airport}}
+  {{#if airport}}
     <nav.item>
-      {{#nav.link-to "flights.airport" @airport.id}}{{@airport.name}}{{/nav.link-to}}
+      {{#nav.link-to "flights.airport" airport.id}}{{airport.name}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if @club}}
+  {{#if club}}
     <nav.item>
-      {{#nav.link-to "flights.club" @club.id}}{{@club.name}}{{/nav.link-to}}
+      {{#nav.link-to "flights.club" club.id}}{{club.name}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if (and this.account.club (not-eq this.account.club.id @club.id))}}
+  {{#if (and account.club (not-eq account.club.id club.id))}}
     <nav.item>
-      {{#nav.link-to "flights.club" this.account.club.id}}{{this.account.club.name}}{{/nav.link-to}}
+      {{#nav.link-to "flights.club" account.club.id}}{{account.club.name}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if @pilot}}
+  {{#if pilot}}
     <nav.item>
-      {{#nav.link-to "flights.pilot" @pilot.id}}{{@pilot.name}}{{/nav.link-to}}
+      {{#nav.link-to "flights.pilot" pilot.id}}{{pilot.name}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if (and this.account.user (not-eq this.account.user.id @pilot.id))}}
+  {{#if (and account.user (not-eq account.user.id pilot.id))}}
     <nav.item>
-      {{#nav.link-to "flights.pilot" this.account.user.id}}{{this.account.user.name}}{{/nav.link-to}}
+      {{#nav.link-to "flights.pilot" account.user.id}}{{account.user.name}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if this.account.user}}
+  {{#if account.user}}
     <nav.item>
       {{#nav.link-to "flights.unassigned"}}{{t "unassigned"}}{{/nav.link-to}}
     </nav.item>
   {{/if}}
 
-  {{#if this.hasPinned}}
+  {{#if hasPinned}}
     <nav.item>
       {{#nav.link-to "flights.pinned"}}{{t "pinned"}}{{/nav.link-to}}
     </nav.item>
