--- a/ember/app/components/flight-page.hbs
+++ b/ember/app/components/flight-page.hbs
@@ -64,8 +64,7 @@
       <FixTable
         @flights={{fixCalc.flights}}
         @fixes={{fixCalc.fixes}}
-        @selection={{this.selectedFlightId}}
-        @onSelectionChange={{fn (mut this.selectedFlightId)}}
+        @selection={{mut selectedFlightId}}
         @onRemove={{action "removeFlight"}} />
     </div>
 
