--- a/ember/app/components/layer-switcher.hbs
+++ b/ember/app/components/layer-switcher.hbs
@@ -1,6 +1,6 @@
 <div local-class="GraphicLayerSwitcher" class="ol-unselectable" ...attributes>
-  {{#if this.open}}
-    <div id="GraphicLayerSwitcher-open" {{on-click-outside (fn (mut this.open) false) eventType="mousedown"}}>
+  {{#if open}}
+    <div id="GraphicLayerSwitcher-open" {{on-click-outside (action (mut open) false) eventType="mousedown"}}>
       <div local-class="base_layers">
         {{#each this.BASE_LAYERS as |layer|}}
           <LayerSwitcherElement
@@ -22,9 +22,7 @@
     </div>
   {{else}}
     <div id="GraphicLayerSwitcher-closed">
-      <button type="button" {{on "click" (fn (mut this.open) true)}}>
-        <img src="../../images/layers.png">
-      </button>
+      <button {{action "open"}}><img src="../../images/layers.png"></button>
     </div>
   {{/if}}
 </div>
