--- a/ember/app/components/wingman-row.hbs
+++ b/ember/app/components/wingman-row.hbs
@@ -1,60 +1,60 @@
-<tr local-class="wingman-row" class="selectable" style={{this.colorStripeStyle}} ...attributes>
+<tr local-class="wingman-row" class="selectable" style={{colorStripeStyle}} ...attributes>
   <td>
-    {{#if this.flight.model.id}}
+    {{#if flight.model.id}}
       <span>
-        <BsTooltip @title={{concat "Handicap: " this.flight.model.index}} @placement="bottom" />
-        {{this.flight.model.name}}
+        <BsTooltip @title={{concat "Handicap: " flight.model.index}} @placement="bottom" />
+        {{flight.model.name}}
       </span>
-    {{else if this.igcFile.model}}
-      [{{this.igcFile.model}}]
+    {{else if igcFile.model}}
+      [{{igcFile.model}}]
     {{else}}
       [{{t "unknown"}}]
     {{/if}}
 
     <small><br>
-      {{#if this.flight.registration}}
-        {{this.flight.registration}}
-      {{else if this.igcFile.registration}}
-        {{this.igcFile.registration}}
+      {{#if flight.registration}}
+        {{flight.registration}}
+      {{else if igcFile.registration}}
+        {{igcFile.registration}}
       {{/if}}
 
-      {{#if this.flight.competitionId}}
-        &ndash; {{this.flight.competitionId}}
-      {{else if this.igcFile.competitionId}}
-        &ndash; {{this.igcFile.competitionId}}
+      {{#if flight.competitionId}}
+        &ndash; {{flight.competitionId}}
+      {{else if igcFile.competitionId}}
+        &ndash; {{igcFile.competitionId}}
       {{/if}}
     </small>
   </td>
   <td>
-    {{#if this.pilotName}}
-      {{#if this.pilot.id}}
-        <LinkTo @route="user" @model={{this.pilot.id}} @bubbles={{false}}>{{this.pilotName}}</LinkTo>
+    {{#if pilotName}}
+      {{#if pilot.id}}
+        <LinkTo @route="user" @model={{pilot.id}} @bubbles={{false}}>{{pilotName}}</LinkTo>
       {{else}}
-        {{this.pilotName}}
+        {{pilotName}}
       {{/if}}
     {{/if}}
 
-    {{#if (and this.pilotName this.copilotName)}}<br>{{/if}}
+    {{#if (and pilotName copilotName)}}<br>{{/if}}
 
-    {{#if this.copilotName}}
-      {{#if this.copilot.id}}
-        <LinkTo @route="user" @model={{this.copilot.id}} @bubbles={{false}}>{{this.copilotName}}</LinkTo>
+    {{#if copilotName}}
+      {{#if copilot.id}}
+        <LinkTo @route="user" @model={{copilot.id}} @bubbles={{false}}>{{copilotName}}</LinkTo>
       {{else}}
-        {{this.copilotName}}
+        {{copilotName}}
       {{/if}}
     {{/if}}
 
-    {{#if (not (or this.pilotName this.copilotName))}}
+    {{#if (not (or pilotName copilotName))}}
     [{{t "unspecified"}}]
     {{/if}}
   </td>
   <td class="times-column">
-    {{format-time this.times.firstObject.start format="hhmmss" timeZone="UTC"}}<br>
-    {{format-time this.times.lastObject.end format="hhmmss" timeZone="UTC"}}
+    {{format-time times.firstObject.start format="hhmmss" timeZone="UTC"}}<br>
+    {{format-time times.lastObject.end format="hhmmss" timeZone="UTC"}}
 
     <BsPopover @title="Periods" @triggerEvents="hover">
       <table>
-        {{#each this.times as |interval|}}
+        {{#each times as |interval|}}
           <tr>
             <td style="text-align: right;">{{format-time interval.start format="hhmmss" timeZone="UTC"}}</td>
             <td>-</td>
