--- a/ember/app/components/wingman-table.hbs
+++ b/ember/app/components/wingman-table.hbs
@@ -1,14 +1,16 @@
-<table class="table table-condensed" ...attributes>
-  <thead>
-    <tr>
-      <th>{{t "aircraft"}}</th>
-      <th>{{t "pilot"}}</th>
-      <th>{{t "first-last"}}</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each this.nearFlightsWithColors as |nearFlight|}}
-      <WingmanRow @nearFlight={{nearFlight}} {{on "click" (action "select" nearFlight.flight.id)}} />
-    {{/each}}
-  </tbody>
-</table>
+<div ...attributes>
+  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>{{t "aircraft"}}</th>
+        <th>{{t "pilot"}}</th>
+        <th>{{t "first-last"}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each nearFlightsWithColors as |nearFlight|}}
+        <WingmanRow @nearFlight={{nearFlight}} {{on "click" (action "select" nearFlight.flight.id)}} />
+      {{/each}}
+    </tbody>
+  </table>
+</div>
