--- a/ember/app/components/upload-result-form.hbs
+++ b/ember/app/components/upload-result-form.hbs
@@ -92,6 +92,7 @@
         @minDate={{igcStartTime}}
         @maxDate={{igcEndTime}}
         @time_24hr={{true}}
+        step="1"
       />
 
       {{#if validations.attrs.takeoffTime.message}}
@@ -112,6 +113,7 @@
         @minDate={{igcStartTime}}
         @maxDate={{igcEndTime}}
         @time_24hr={{true}}
+        step="1"
       />
 
       {{#if validations.attrs.scoreStartTime.message}}
@@ -132,6 +134,7 @@
         @minDate={{igcStartTime}}
         @maxDate={{igcEndTime}}
         @time_24hr={{true}}
+        step="1"
       />
 
       {{#if validations.attrs.scoreEndTime.message}}
@@ -152,6 +155,7 @@
         @minDate={{igcStartTime}}
         @maxDate={{igcEndTime}}
         @time_24hr={{true}}
+        step="1"
       />
 
       {{#if validations.attrs.landingTime.message}}
