--- a/ember/app/templates/tracking/info.hbs
+++ b/ember/app/templates/tracking/info.hbs
@@ -17,9 +17,9 @@
           {{t "tracking.instructions-below"}}
         </li>
         <li>
-          <b>SkyLines Tracker:</b><br>
-          {{t "tracking.skylines-tracker-description"}}
-          (<a href="https://play.google.com/store/apps/details?id=ch.luethi.skylinestracker" target="_blank" rel="noopener">Google Play</a>)
+          <b>Gaggle:</b><br>
+          {{t "tracking.available-in-gaggle"}}
+          (<a href="https://play.google.com/store/apps/details?id=com.geeksville.gaggle" target="_blank" rel="noopener">Google Play</a>)
         </li>
         <li>
           <b>{{t "tracking.lt24-clients"}}:</b><br>
